# adaptive-speculative-decoding

./: .dockerignore  .gitignore  CLAUDE.md  CODEX.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  Makefile  README.MD  pyproject.toml  requirements-gpu.txt  requirements.txt
.github/: pull_request_template.md
benchmarks/: bench_speculative.py
configs/: experiments.json  mdp_default.yaml  method_templates.json  methods.json  models.json
datasets/: results_qwen72h_2026-04-09.jsonl  results_qwen72h_2026-04-09_smoke.jsonl
docs/: CONSENSUS_AUTOJUDGE.md  GITHUB_SETUP.md  RESULTS.md  ROADMAP.md
file_changes/: 2026-02-25-paper-alignment.md  2026-03-06-local-models-livecodebench.md  2026-04-21-jointadaspec-thesis-pipeline.md
jointadaspec/: __init__.py
reports/: autojudge_qwen25_paper_2026-02-21-qwen3b.csv  autojudge_qwen25_paper_2026-02-21-qwen3b.json  autojudge_qwen25_paper_2026-02-21-qwen3b.md  autojudge_run_manifest_2026-02-21-qwen3b.json  autojudge_run_manifest_2026-02-21.json  conditions_qwen14b_0p5b_2026-04-28.json  consensus_midscale_gsm8k.csv  consensus_midscale_gsm8k.json  consensus_midscale_gsm8k.md  consensus_reduced_gsm8k.csv  consensus_reduced_gsm8k.json  consensus_reduced_gsm8k.md  gemma2_9b_2b_run_manifest_2026-03-16-gemma.json  gemma2_9b_2b_run_manifest_2026-03-16.json  jointadaspec_qwen_7b_1p5b_2026-04-14.md  llama3_8b_3b_run_manifest_2026-03-24-llama-48h.json  llama3_8b_3b_run_manifest_2026-03-24-llama-smoke.json  llama3_8b_3b_run_manifest_2026-03-28-llama-48h-cgrid8.json  llama3_8b_3b_run_manifest_2026-04-01-llama-48h-hgbt.json  (+57 more)
(+150 files in other folders)
